Remove inline styling

--- a/Index.html
+++ b/Index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
 
-  <body style="background-color: royalblue;">
+  <body >
 
-    <div class="container" style="color: white; padding-top: 100px; padding-left: 30px; padding-right: 30px;"> 
+    <div class="container" > 
           <div class="row">
             <div class="col-1"></div>
             <div class="col-10">
