Errors correction in Indexpage

--- a/Index.html
+++ b/Index.html
@@ -56,8 +56,8 @@
                     </select>
                   </div><p></p><p></p>
                   <div class="form-group">
-                    <label for="recommend"> 
-                      <p>Would you recommend freeCodeCamp to a friend?</p>
+                    <label class="recommend"> 
+                      <h6>Would you recommend freeCodeCamp to a friend?</h6>
                       <input type="radio" id="def" name="def" value="Definitely">
                       <label for="def">Definitely</label><br>
                       <input type="radio" id="maybe" name="def" value="Maybe">
