--- a/Index.html
+++ b/Index.html
@@ -19,8 +19,8 @@
               <p class="text-center" id="description">
                 <i>Thank you for taking the time to help us improve the platform </i>
               </p>
-              <p></p><p></p><p></p><p></p><p></p><p></p>
-              <div class="row" style="padding-top: 50px; padding-bottom: 50px; background-color: midnightblue; border-radius: 10px;">
+              
+              <div class="row" >
                 <form id="survey-form">
                   <div class="form-group">
                     <label for="name" id="name-label"><b>Name</b></label>
@@ -46,8 +46,8 @@
                     </select>
                   </div><p></p><p></p>
                   <div class="form-group">
-                    <label for="dropdown"><b>What is your favorite feature of freeCodeCamp?</b> </label>
-                    <select class="form-control" id="dropdown">
+                    <label for="dropdown1"><b>What is your favorite feature of freeCodeCamp?</b> </label>
+                    <select class="form-control" id="dropdown1">
                       <option selected value="">Select an option</option>
                       <option>Challenges</option>
                       <option>Projects</option>
@@ -56,7 +56,7 @@
                     </select>
                   </div><p></p><p></p>
                   <div class="form-group">
-                    <label class="recommend"> 
+                    <div class="recommend"> 
                       <h6>Would you recommend freeCodeCamp to a friend?</h6>
                       <input type="radio" id="def" name="def" value="Definitely">
                       <label for="def">Definitely</label><br>
@@ -64,7 +64,7 @@
                       <label for="maybe">Maybe</label><br>
                       <input type="radio" id="not" name="def" value="Not sure">
                       <label for="not">Not Sure</label>
-                    </label>
+                    </div>
                   </div>
                   <p></p><p></p>
                   <label for="dropdown"><b>What would you like to see improved? (Check all that apply)</b> </label>
