--- a/Index.html
+++ b/Index.html
@@ -111,13 +111,13 @@
                   <div class="form-group form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck11" value="added">
                     <label class="form-check-label" for="exampleCheck10">Additional Courses</label>
-                  </div><p></p><p></p>
+                  </div>
                   <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Any comments or suggestions?</label>
+                    <label for="additionalComments">Any comments or suggestions?</label>
                     <textarea class="form-control" id="additionalComments" name="additionalComments" rows="3" placeholder="Enter your comment here ..."></textarea>
-                  </div><p></p><p></p>
+                  </div>
                   <div class="form-group">
-                    <input type="submit" id="submit" class="btn-success" class="form-control" value="Submit" />
+                    <input type="submit" id="submit" class="btn-success"  value="Submit" />
                   </div>
                 </form>
               </div>
