Add heading inside header tag

--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,9 @@
           <div class="row">
             <div class="col-1"></div>
             <div class="col-10">
-              <h1 class="text-center" id="title">freeCodeCamp Survey Form</h1>
+              <header>
+                <h1 class="text-center" id="title">freeCodeCamp Survey Form</h1>
+              </header>
               <p class="text-center" id="description">
                 <i>Thank you for taking the time to help us improve the platform </i>
               </p>
