Replace div with section tag

--- a/Index.html
+++ b/Index.html
@@ -16,13 +16,13 @@
             <div class="col-1"></div>
             <div class="col-10">
               <header>
-                <h1 class="text-center" id="title">freeCodeCamp Survey Form</h1>
+                <h1 class="text-center" id="Maintitle">freeCodeCamp Survey Form</h1>
               </header>
               <p class="text-center" id="description">
                 <i>Thank you for taking the time to help us improve the platform </i>
               </p>
               
-              <div class="row" >
+              <section class="row" >
                 <form id="survey-form">
                   <div class="form-group">
                     <label for="name" id="name-label"><b>Name</b></label>
@@ -125,7 +125,7 @@
               </div>
             </div>
             <div class="col-1"></div>
-          </div>
+          </section>
     </div>
     </body>
 </html>
